<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainframe.GroupFragment">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sort" />

        <com.example.pokemonbook.custonView.TopButton
            android:id="@+id/Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:isSelect="true"
            app:tbText="@string/def" />


        <com.example.pokemonbook.custonView.TopButton
            android:id="@+id/attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:isSelect="false"
            app:tbText="@string/attack" />

        <com.example.pokemonbook.custonView.TopButton
            android:id="@+id/defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            app:isSelect="false"
            app:tbText="@string/defense" />

        <com.example.pokemonbook.custonView.TopButton
            android:id="@+id/spd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="10sp"
            app:isSelect="false"
            app:tbText="@string/spd" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_category" />

    <com.example.pokemonbook.custonView.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>