<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/first_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:id="@+id/second_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/topContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_name_and_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="AAA #111" />

        <ImageView
            android:id="@+id/iv_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_heart" />

        <com.example.pokemonbook.custonView.LoadingableImageView
            android:id="@+id/iv_pokemon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/iv_heart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />


        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_pokemon"
            android:layout_alignBottom="@id/iv_pokemon"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_pokemon"
            android:layout_alignBottom="@id/iv_pokemon"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_arrow_forward_ios_24" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/bottom_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topContent"
        android:background="@color/lime">

        <RelativeLayout
            android:id="@+id/bottom_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_about"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/div_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_weight"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/div_line"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/attr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/hp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hp"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/def"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/def"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/atk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atk"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/spd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spd"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/attr_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@id/attr"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="300" />


                    <TextView
                        android:id="@+id/textHp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="300" />


                    <TextView
                        android:id="@+id/textAtk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="300" />


                    <TextView
                        android:id="@+id/textDef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="300" />


                    <TextView
                        android:id="@+id/textSpd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="300" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>

    <com.example.pokemonbook.custonView.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>