<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Detail.DetailActivity">

    <RelativeLayout
        android:id="@+id/topContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_name_and_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="AAA #111" />

        <ImageView
            android:id="@+id/iv_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/iv_pokemon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/iv_heart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            tools:src="@tools:sample/avatars" />


        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_pokemon"
            android:layout_alignBottom="@id/iv_pokemon"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_pokemon"
            android:layout_alignBottom="@id/iv_pokemon"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_arrow_forward_ios_24" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/bottom_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topContent"
        android:background="@color/lime">

        <RelativeLayout
            android:id="@+id/bottom_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_about"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/div_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_weight"
                android:layout_marginTop="10dp"
                android:background="@color/white" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/div_line"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/total"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="300" />

                <TextView
                    android:id="@+id/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/total"
                    android:layout_marginTop="10dp"
                    android:text="@string/hp"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textHp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/total"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/total"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="300" />

                <TextView
                    android:id="@+id/atk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hp"
                    android:layout_marginTop="10dp"
                    android:text="@string/atk"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textAtk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/total"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="300" />

                <TextView
                    android:id="@+id/def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/atk"
                    android:layout_marginTop="10dp"
                    android:text="@string/def"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textDef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/atk"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/total"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="300" />

                <TextView
                    android:id="@+id/spd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/def"
                    android:layout_marginTop="10dp"
                    android:text="@string/spd"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textSpd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/def"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/total"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="300" />


            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>

    <com.example.testapplication.CustonView.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" />

</RelativeLayout>